Java 8 migration: repair structural corruption across 186 files
Structural repairs
- Remove duplicated code blocks in WorthPacketDisplay, ItemUtils,
  SignInputUtil, CrashProtectionManager, RTPManager, ShopManager,
  DatabaseManager (11502 -> 6061 lines), FakePlayerProtocolLibBridge
- Reconstruct spliced/truncated regions (maintenance-location fragments,
  AmethystToolsManager.createTool shard-booster block, ShopManager potion
  branch, ConfigManager linesOf helper)
- Convert 13 leftover record compact constructors into constructor
  normalization (ShardManager, ShopManager, SpawnerTypeDefinition x2,
  AuctionHouseRepository, StaffCustomItem, 7 models files)

Java 8 language downgrades
- ~170 corrupted switch expressions converted to classic Java 8 switches
  (return/assignment/statement contexts, grouped + comma labels, arrow cases)
- String.isBlank() -> trim().isEmpty() (~640 sites)
- Stream.toList() -> collect(Collectors.toList())
- List/Set/Map.copyOf -> mutable copies; StringBuilder.isEmpty -> length()
- var -> explicit types (CrateManager batch); Files.readString/writeString
  and String.lines() replaced in ConfigManager

Cleanup of intentionally removed systems
- Strip MongoDB leftovers from DatabaseManager (imports, MONGODB enum,
  initializeMongoBridgeConnection) - driver absent from pom

Preserved systems: AntiESP, SpawnStash, Shards, Amethyst Tools, FakePlayer,
StaffMode, Shop, Auction House, Orders, Worth, Crates, Homes, RTP, Hide.

Status: java-parser validation improved from 52+ to 38 remaining failures
(fused statement splices); instanceof-pattern/var/text-block conversions
queued. See MIGRATION_STATUS.md. No JDK/Maven available in this environment,
so no compilation has been performed.

Co-authored-by: arena-agent <297053741+arena-agent@users.noreply.github.com>