@@ -146,7 +146,7 @@ public class FlySpeedCommand implements CommandExecutor {
     }
 
     private Player findOnlinePlayer(String input) {
-        if (input == null || input.isBlank()) {
+        if (input == null || input.trim().isEmpty()) {
             return null;
         }
         Player exact = Bukkit.getPlayerExact(input);
