@@ -123,7 +123,7 @@ public class GodModeCommand extends Command implements CommandExecutor {
     }
 
     private Player findOnlinePlayer(String input) {
-        if (input == null || input.isBlank()) {
+        if (input == null || input.trim().isEmpty()) {
             return null;
         }
 
