@@ -247,7 +247,7 @@ public class TeleportCommand implements CommandExecutor {
     }
 
     private Player findOnlinePlayer(String input) {
-        if (input == null || input.isBlank()) {
+        if (input == null || input.trim().isEmpty()) {
             return null;
         }
 
