@@ -50,7 +50,7 @@ public final class AuctionListing {
         CANCELLED;
 
         public static Status fromDatabase(String rawValue) {
-            if (rawValue == null || rawValue.isBlank()) {
+            if (rawValue == null || rawValue.trim().isEmpty()) {
                 return ACTIVE;
             }
 
